syntax = "proto3";

option csharp_namespace = "GrpsServer";

package customers;

service Customer {
	rpc GetCustomerInfo (CustomerFindModel) returns (CustomerDataModel);

	rpc GetAllCustomers (Unit) returns (stream CustomerDataModel);
}

message CustomerFindModel {
	int32 userId = 1;
}

message CustomerDataModel {
	string firstName = 1;
	string lastName = 2;
}

// in gRPC we cannot have a method with empty parameters
// so we create an empty message 
message Unit {

}
